fix: set max-width on page header illustrations not to overflow

--- a/theme/styles/page-header.scss
+++ b/theme/styles/page-header.scss
@@ -19,6 +19,7 @@
 
 	img {
 		max-height: 200px;
+		max-width: 100%;
 		margin-bottom: 16px;
 	}
 
